# msys-hal

./: .gitignore  .msys-packageignore  README.md  manifest.json  pyproject.toml
docs/: ch347-control.md  hal-contract-v1.md  linux-providers.md  native-hal.md  storage-hal.md  touch-calibration.md
examples/: board-provider-manifest.json
files/share/i18n/: catalog.json
manifests/: msys-hal.json
msys_hal/: __init__.py  ch347.py  display_session.py  errors.py  linux.py  manager.py  mipc.py  provider.py  radios.py  validation.py
native/: Makefile
native/src/: native_hal.c
scripts/: build-native.sh  measure-native-rss.sh  native-target-smoke.sh
tests/: native_mgmt_protocol_test.c  test_ch347.py  test_contract_and_mipc.py  test_display_session.py  test_linux.py  test_manager.py  test_native_hal.py  test_provider.py  test_radios.py
